# aws-deploy

./: .gitignore  README.md
api_gateway_cors/: Readme.md  api.tf  cognito.tf  default.tf  iam.tf  lambda.tf  sfn.tf  terraform.tf
app_runner/terraform/: locals.tf  resources.tf  roles.tf  s3.tf  terraform.tf
eks/: Readme.md
metaflow/: locals.tf  main.tf  variables.tf
metaflow/computation/: batch.tf  compute_environment.tf  ec2.tf  iam-ecs-service.tf  locals.tf  outputs.tf  variables.tf
metaflow/compute_environment/: ce.tf  outputs.tf  variables.tf
metaflow/datastore/: locals.tf  outputs.tf  rds.tf  s3.tf  variables.tf
metaflow/metadata-service/: api-gateway.tf  ec2.tf  ecs.tf  iam.tf  lambda.tf  locals.tf  variables.tf
metaflow/step-functions/: iam-step-functions.tf  variables.tf
mlflow/: Readme.md
mlflow/terraform/: alb.tf  autoscaling.tf  default.tf  ecs.tf  iam.tf  security_groups.tf
streamlit/: Dockerfile  publish.sh
streamlit/eksctl/: 2048.yaml  eks-cluster-fargate.yaml  streamlit.yaml
streamlit/terraform/: alb.tf  autoscaling.tf  data.tf  default.tf  ecs.tf  lb.tf  locals.tf  networking.tf  resources.tf  roles.tf  sg.tf  storage.tf
streamlit/terraform_ecs/: alb.tf  cognito.tf  networking.tf  route53.tf  terraform.tf
streamlit/terraform_eks/: alb.tf  app.tf  default.tf  eks.tf  iam.tf  networking.tf  security_groups.tf  service.tf  terraform.tf
zenml/: pyproject.toml  run.py  sagemaker.sh
